ASM-248 Security fixes